# rpc_feed

./: .gitignore  AGENTS.md  Dockerfile  MANIFEST.in  README.md  alembic.ini  build.sh  crontab.py  db_init.py  db_migration.py  deploy_database.py  deploy_db.py  errors.py  feed.py  genPlist.py  init.sh  install-airflow.sh  meta.py  pyproject.toml  quote.py  rpc_svr.py  runs.py  setup.py
alembic/: mock.py
alembic/versions/: 28cdc82de517_change_sid_and_name_from_str_to_bytes.py  542a904f887a_revise_unqiue_order_id_in_order_bit.py  616545e13eb4_revise_adjustment_and_rightment_.py  6b9cab09e836_revise_vtorder_foreign_key_keep_vtorder_.py  95eb41d7a5ac_add_created_dt_on_vtposition.py
contrib/: operator.py  provider.pxd  provider.pyx  search.py  service.proto  template.py  to_graph.py
core/: datasets.py  model.py  supplement.py
core/libs/: adjusted.py
core/ops/: operator.py  schema.py
core/ops/avro/: adjustment.avsc  instrument.avsc
core/rpc/: client.py
core/serialize/pb/: service.proto  service_pb2.py  service_pb2.pyi  service_pb2_grpc.py
quandl/: graph.py
quandl/node/: __init__.py  format.py  loader.py
rpc_feed/: db_migration.py  duckdb_macro.db  duckdb_macro.db.wal  feed.py  filter.py  meta.py  registered_views.json  rpc_svr.py  run_server.py  setup.py  visualize.py
rpc_feed/core/: feed.py  filter.py  graph_example.xml  model.py  schema.py  server.py
rpc_feed/core/datasets/: __init__.py  base.py  model.py  provider.cpp  provider.pxd  provider.pyx  providers.py  template.py
rpc_feed/core/gateway/: __init__.py
rpc_feed/core/graph/: __init__.py  base.py  graph_memory.py  memory.py  meta.py  monitor.py  mp_mem.py  mp_util.py  serialize.py  to_graph.py  util.py  visualize.py
rpc_feed/quandl/: __init__.py
rpc_feed/scripts/: update_asset.py
rpc_feed/tests/: test_db.py  test_rpc.py
rpc_feed/utils/: api_support.py  boost.py  cache.py  context_tricks.py  dateintern.cpp  dateintern.pxd  dateintern.pyx  dt_utilty.py  duck_utils.py  formatting.py  io.py  loader.py  log.py  memorize.py  mp_fix.py  paral.py  paths.py  preprocess.py  registry.py  schedule.py  signal_handler.py  utility.py  weak_ref.py  wrapper.py
rpc_feed/writers/: asset_writer.py
rpc_feed/xml/: minute.graphml  rightment.graphml
samples/: data.py
scripts/: asset_writer.py  benchmark_rewriter.py  deploy.py  fix_tick.py  partition.py  pg_init.py  pipeline.py  rewrite_parquet.py  run.sh  sync.py
tests/: clean.py  duckdb_macro.db  registered_views.json  test_clean.py  test_db.py  test_duckdb.py  test_graph.py  test_quote.py  test_udp.py
utils/: argcheck.py  boost.py  dt_utilty.py  dtype_utils.py  extensions.py  input_validation.py  io.py  math_utils.py  paths.py  registry.py  rules.py  utility.py  weak_ref.py  wrapper.py
xml/: adjustment.graphml  asset.graphml  benchmark_csv.graphml  calendar.graphml  csv.graphml  csv_fund.graphml  fund.graphml  fund_csv.graphml  minute.graphml  rightment.graphml  test.graphml  tick.graphml  tick_csv.graphml
(+76 files in other folders)
