[tool.poetry]
name = "rpc-feed"
version = "0.1.0"
description = ""
authors = ["hengxin.liu <hengxin.liu@inceptio.ai>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
grpcio = "^1.71.0"
grpcio-tools = "^1.71.0"
pandas = "2.1.4"
avro = "^1.12.0"
toolz = "^1.0.0"
alembic = "^1.15.1"
pydantic = "2.5.3"
ipython = "<9.0.0"
colorama = "^0.4.6"
pyyaml = "^6.0.2"
pytest = "^8.3.5"
matplotlib = "<3.10"
psycopg = "^3.2.6"
greenlet = "^3.1.1"
networkx = "==3.1.*"
joblib = "^1.5.1"
asyncpg = "^0.30.0"
pyarrow = "^20.0.0"
duckdb = "^1.3.0"
pyvis = "^0.3.2"
dotenv = "^0.9.9"
numpy = ">=1.23.2,<2"
psutil = "^7.0.0"
openpyxl = "^3.1.5"
uvloop = "^0.22.1"
cython = "^3.2.3"
polar = "^0.0.127"
polars = "^1.39.2"
loky = "^3.5.6"

[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
priority = "primary"  

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
